--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/wecode-bootcamp-korea/40-1st-Meet-Meat-backend#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "convert-csv-to-json": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
